--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2324,7 +2324,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def recent_performance_between_tow(team_one, team_two):\n",
+    "    pass\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_head_to_head(team_one, team_tow):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
