--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2349,6 +2349,16 @@
     "def win_loss_draw(team_one, team_two):\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def playertop5(team):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
