feature_oen commit_one

--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2325,30 +2325,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "def player_performance(team):\n",
+    "    url = f\"https://fbref.com/en/squads/0c2b3c9b/{team}-Stats\"\n",
+    "    page = requests.get(url)\n",
+    "    soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "    table = soup.find_all(\"table\")[0]\n",
+    "    df = pd.read_html(str(table))[0]\n",
+    "    df = df.set_index(\"Player\")\n",
+    "    df = df.dropna(how='all')\n",
+    "    return df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
