Feature one commit two

--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2335,6 +2335,18 @@
     "    df = df.dropna(how='all')\n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def player_performance_plot(team):\n",
+    "    df = player_performance(team)\n",
+    "    fig, axs = plt.subplots(2, 2, figsize=(15, 9))\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
