--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2325,30 +2325,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n"
+    "#Bug fix "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
