Feature_two commit 1

--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2318,6 +2318,26 @@
     "plot_team_performance(team_two, state)\n",
     "showall_data(team_two)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_team_performance(team, state):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_team_performance_two(team, state):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
