Feature_two commit two

--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2338,6 +2338,16 @@
     "def plot_team_performance_two(team, state):\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_feature(team, state):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
