--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2272,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +2316,8 @@
    ],
    "source": [
     "plot_team_performance(team_two, state)\n",
-    "showall_data(team_two)"
+    "showall_data(team_two)\n",
+    "showall_data(team_one)"
    ]
   }
  ],
