--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2357,6 +2357,7 @@
    "outputs": [],
    "source": [
     "def new_feature_two(team, state):\n",
+    "    plt_two\n",
     "    pass"
    ]
   }
