--- a/Laliga.ipynb
+++ b/Laliga.ipynb
@@ -2357,7 +2357,18 @@
    "outputs": [],
    "source": [
     "def new_feature_two(team, state):\n",
-    "    plt_two\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_feature_six(team, state):\n",
+    "    '''this is feature seven'''\n",
+    "    pass"
    ]
   }
  ],
